# cpp-serializers

./: .clang-format  .gitignore  CMakeLists.txt  README.md  benchmark.cpp  data.hpp  test.capnp  test.cpp  test.fbs  test.json  test.proto  test.thrift
avro/: record.hpp
bitsery/: record.hpp
boost/: record.cpp  record.hpp
capnproto/: test.capnp.c++  test.capnp.h
cereal/: record.cpp  record.hpp
flatbuffers/: test_generated.h
images/: generate_graph_data.sh  graphs.R
msgpack/: record.hpp
protobuf/: test.pb.cc  test.pb.h
thrift/gen-cpp/: test_constants.cpp  test_constants.h  test_types.cpp  test_types.h
yas/: record.cpp  record.hpp
zpp/: record.hpp
